# hello-ninja-pi400

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEV_COMMANDS.txt  Dev_commands.md  main  main.cpp  math_utils.cpp  run_pipeline.sh
.github/workflows/: cpp-ci.yml
include/: math_utils.hpp
tests/: test_math.cpp  test_sum.cpp
